<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication">

    <ImageView
        android:id="@+id/authentication_screen_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/medium_20"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.1"
        app:srcCompat="@drawable/auth_logo"
        android:contentDescription="@string/image_content_description" />

    <TextView
        android:id="@+id/authentication_screen_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/base"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:layout_below="@+id/authentication_screen_logo"
        android:text="@string/already_have_an_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authentication_screen_linear_layout"
        android:layout_below="@+id/authentication_screen_title_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/base"
        android:padding="@dimen/medium_20"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/medium_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/authentication_screen_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_20"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/authentication_screen_forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base"
            android:text="@string/forgot_password" />

    </LinearLayout>

    <Button
        android:id="@+id/authentication_screen_sign_up"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/authentication_screen_linear_layout"
        android:layout_centerInParent="true"
        android:text="@string/sign_up" />

</RelativeLayout>